test/sql/function/timestamp/test_strptime.test
# name: test/sql/function/timestamp/test_strptime.test
# description: Test strptime function
# group: [timestamp]

statement ok
PRAGMA enable_verification

query I
SELECT strptime('21 June, 2018', '%d %B, %Y')
----
2018-06-21 00:00:00

query I
SELECT strptime('21/10/2018', '%d/%m/%Y')
----
2018-10-21 00:00:00

query I
SELECT strptime('2018-20-10', '%Y-%d-%m')
----
2018-10-20 00:00:00

query I
SELECT strptime('20182010', '%Y%d%m')
----
2018-10-20 00:00:00

query I
SELECT strptime('Mon 30, June 2003, 12:03:10 AM', '%a %d, %B %Y, %I:%M:%S %p')
----
2003-06-30 00:03:10

query I
SELECT strptime('Mon 30, June 2003, 12:03:10 PM', '%a %d, %B %Y, %I:%M:%S %p')
----
2003-06-30 12:03:10

query I
SELECT strptime('Mon 30, December 2003, 7:3:5 PM', '%a %d, %B %Y, %I:%M:%S %p')
----
2003-12-30 19:03:05

query I
SELECT strptime('Tuesday 30, December 2003, 7:3:5 PM', '%A %d, %B %Y, %I:%M:%S %p')
----
2003-12-30 19:03:05

query I
SELECT strptime('Mon 30, December 30, 7:3:5 PM', '%a %d, %B %y, %I:%M:%S %p')
----
2030-12-30 19:03:05

# for strptime there is no difference between %- and %
query I
SELECT strptime('Mon 30, June 2003, 12:03:10 AM', '%a %-d, %B %Y, %-I:%-M:%-S %p')
----
2003-06-30 00:03:10

# lowercase also works
query I
SELECT strptime('mon', '%a')
----
1900-01-01 00:00:00

query I
SELECT strptime('tuesday', '%A')
----
1900-01-01 00:00:00

query I
SELECT strptime('jun', '%b')
----
1900-06-01 00:00:00

# First Sunday of Monday weeks is Jan 7
query I
SELECT strptime('1', '%W')
----
1900-01-07 00:00:00

# First Sunday of Sunday weeks is Jan 7
query I
SELECT strptime('1', '%U')
----
1900-01-07 00:00:00

query II
SELECT strptime('30', '%U'), strftime('1900-07-29'::DATE, '%U')
----
1900-07-29 00:00:00	30

query II
SELECT strptime('30', '%W'), strftime('1900-07-29'::DATE, '%W')
----
1900-07-29 00:00:00	30

# Ignored
query I
SELECT strptime('6', '%w')
----
1900-01-01 00:00:00

# Thursday after 1st Sunday
query II
SELECT strptime('1-4', '%U-%w'), strftime('1900-01-11'::DATE, '%U-%w')
----
1900-01-11 00:00:00	01-4


# Thursday after 1st Monday
query II
SELECT strptime('1-4', '%W-%w'), strftime('1900-01-04'::DATE, '%W-%w')
----
1900-01-04 00:00:00	01-4

# day of year
query II
SELECT strptime('30', '%j'), strftime('1900-01-30'::DATE, '%-j')
----
1900-01-30 00:00:00	30

# day of year AND month
query I
SELECT strptime('1992-01-30 30', '%Y-%m-%d %j')
----
1992-01-30 00:00:00

# Year-Sunday Week-Weekday
query II
SELECT strptime('2021-19-4', '%Y-%U-%w'), strftime('2021-05-13'::DATE, '%Y-%U-%w')
----
2021-05-13 00:00:00	2021-19-4

# Year-Monday Week-Weekday
query II
SELECT strptime('2021-19-4', '%Y-%W-%w'), strftime('2021-05-13'::DATE, '%Y-%U-%w')
----
2021-05-13 00:00:00	2021-19-4

# Year, Sunday Week 0, Friday
query II
SELECT strptime('2021-0-5', '%Y-%U-%w'), strftime('2021-01-01'::DATE, '%Y-%U-%w')
----
2021-01-01 00:00:00	2021-00-5

# Year, Monday Week 0, Friday
query II
SELECT strptime('2021-0-5', '%Y-%W-%w'), strftime('2021-01-01'::DATE, '%Y-%W-%w')
----
2021-01-01 00:00:00	2021-00-5

# Year-Sunday Week-Weekday Mismatch should defer to the day
query I
SELECT strptime('2021-05-12 19-4', '%Y-%m-%d %U-%w')
----
2021-05-12 00:00:00

# Year-Monday Week-Weekday Mismatch should defer to the day
query I
SELECT strptime('2021-05-12 19-4', '%Y-%m-%d %W-%w')
----
2021-05-12 00:00:00

# Round trip Sunday weeks
query III
SELECT * FROM (
    SELECT dt, strftime(dt, '%Y-%U-%w') AS ft, strptime(strftime(dt, '%Y-%U-%w'), '%Y-%U-%w') AS rt
    FROM (SELECT '2021-01-01'::DATE + (INTERVAL (d) DAY) AS dt FROM range(365) tbl(d)) days
) diffs
WHERE rt <> dt
----

# Round trip Monday weeks
query III
SELECT * FROM (
    SELECT dt, strftime(dt, '%Y-%W-%w') AS ft, strptime(strftime(dt, '%Y-%W-%w'), '%Y-%W-%w') AS rt
    FROM (SELECT '2021-01-01'::DATE + (INTERVAL (d) DAY) AS dt FROM range(365) tbl(d)) days
) diffs
WHERE rt <> dt
----

# empty specifier and string
statement error
SELECT strptime('', '')
----
Invalid Input Error: Failed to parse format specifier : Empty format string

statement error
SELECT strptime(NULL, '')
----
Invalid Input Error: Failed to parse format specifier : Empty format string

query I
SELECT strptime('', NULL)
----
NULL

# Spaces match multiple spaces (Issue #3418)
query I
SELECT strptime('Jun 30 2003  2:03:10AM', '%b %d %Y %-I:%M:%S%p');
----
2003-06-30 02:03:10

# Parse nanoseconds
query I
select strptime('2020-12-31 21:25:58.745232159', '%Y-%m-%d %H:%M:%S.%n');
----
2020-12-31 21:25:58.745232

# Rounding of ns
query I
select strptime('2020-12-31 21:25:58.745232951', '%Y-%m-%d %H:%M:%S.%n');
----
2020-12-31 21:25:58.745233

query I
select strptime('2020-12-31 21:25:58.745232', '%Y-%m-%d %H:%M:%S.%f');
----
2020-12-31 21:25:58.745232

query I
select strptime('2020-12-31 21:25:58.745232', '%Y-%m-%d %H:%M:%S.%f');
----
2020-12-31 21:25:58.745232

# UTC offset - produces TIMESTAMPTZ
query I
select strptime('2020-12-31 21:25:58.745232+00', '%Y-%m-%d %H:%M:%S.%f%z');
----
2020-12-31 21:25:58.745232+00

query I
select strptime('2020-12-31 21:25:58.745232+0000', '%Y-%m-%d %H:%M:%S.%f%z');
----
2020-12-31 21:25:58.745232+00

query I
select strptime('2020-12-31 21:25:58.745232+02', '%Y-%m-%d %H:%M:%S.%f%z');
----
2020-12-31 19:25:58.745232+00

query I
select strptime('2020-12-31 21:25:58.745232-02', '%Y-%m-%d %H:%M:%S.%f%z');
----
2020-12-31 23:25:58.745232+00

query I
select strptime('2020-12-31 21:25:58.745232+0215', '%Y-%m-%d %H:%M:%S.%f%z');
----
2020-12-31 19:10:58.745232+00

query I
select strptime('2020-12-31 21:25:58.745232-0215', '%Y-%m-%d %H:%M:%S.%f%z');
----
2020-12-31 23:40:58.745232+00

# on the boundaries
query I
select strptime('2020-12-31 03:25:58.745232+04', '%Y-%m-%d %H:%M:%S.%f%z');
----
2020-12-30 23:25:58.745232+00

query I
select strptime('2020-12-30 23:25:58.745232-04', '%Y-%m-%d %H:%M:%S.%f%z');
----
2020-12-31 03:25:58.745232+00

# Don't swallow non-spaces
query I
SELECT strptime('Mon Oct 17 2022 22:00:00 GMT+0000 (GMT)', '%a %b %d %Y %X GMT%z (%Z)') as fixed;
----
2022-10-17 22:00:00+00

query I
SELECT strptime('Mon Oct 17 2022 22:00:00 GMT+0000 (GMT', '%a %b %d %Y %X GMT%z (%Z') as working;
----
2022-10-17 22:00:00+00

#
# Multiple patterns
#
query I
SELECT strptime('10/28/1910', ['%d-%m-%Y', '%m-%d-%Y', '%d/%m/%Y', '%m/%d/%Y'])
----
1910-10-28 00:00:00

# Report mismatch for first pattern
statement error
SELECT strptime('10.28.1910', ['%d-%m-%Y', '%m-%d-%Y', '%d/%m/%Y', '%m/%d/%Y'])
----
Error: Literal does not match, expected /

statement error
SELECT strptime('Mon Oct 17 2022 22:00:00 GMT+0000 (GMT)', '%a %b %d %Y %X GMT%z (%Z') as broken;
----
Invalid Input Error: Could not parse string "Mon Oct 17 2022 22:00:00 GMT+0000 (GMT)" according to format specifier "%a %b %d %Y %X GMT%z (%Z"
Mon Oct 17 2022 22:00:00 GMT+0000 (GMT)
                                      ^
Error: Full specifier did not match: trailing characters

# incorrect usage
statement error
select strptime('2020-12-31 21:25:58.745232+0', '%Y-%m-%d %H:%M:%S.%f%z');
----
Invalid Input Error: Could not parse string "2020-12-31 21:25:58.745232+0" according to format specifier "%Y-%m-%d %H:%M:%S.%f%z"
2020-12-31 21:25:58.745232+0
                          ^
Error: Expected +HH[MM] or -HH[MM]

statement error
select strptime('2020-12-31 21:25:58.745232+0X', '%Y-%m-%d %H:%M:%S.%f%z');
----
Invalid Input Error: Could not parse string "2020-12-31 21:25:58.745232+0X" according to format specifier "%Y-%m-%d %H:%M:%S.%f%z"
2020-12-31 21:25:58.745232+0X
                          ^
Error: Expected +HH[MM] or -HH[MM]

statement error
select strptime('2020-12-31 21:25:58.745232+X0', '%Y-%m-%d %H:%M:%S.%f%z');
----
Invalid Input Error: Could not parse string "2020-12-31 21:25:58.745232+X0" according to format specifier "%Y-%m-%d %H:%M:%S.%f%z"
2020-12-31 21:25:58.745232+X0
                          ^
Error: Expected +HH[MM] or -HH[MM]

statement error
select strptime('2020-12-31 21:25:58.745232+000', '%Y-%m-%d %H:%M:%S.%f%z');
----
Invalid Input Error: Could not parse string "2020-12-31 21:25:58.745232+000" according to format specifier "%Y-%m-%d %H:%M:%S.%f%z"
2020-12-31 21:25:58.745232+000
                             ^
Error: Full specifier did not match: trailing characters

statement error
select strptime('2020-12-31 21:25:58.745232X00', '%Y-%m-%d %H:%M:%S.%f%z');
----
Invalid Input Error: Could not parse string "2020-12-31 21:25:58.745232X00" according to format specifier "%Y-%m-%d %H:%M:%S.%f%z"
2020-12-31 21:25:58.745232X00
                          ^
Error: Expected +HH[MM] or -HH[MM]

# different errors
# month out of range
statement error
SELECT strptime('2018-20-10', '%Y-%m-%d')
----
Invalid Input Error: Could not parse string "2018-20-10" according to format specifier "%Y-%m-%d"
2018-20-10
     ^
Error: Month out of range, expected a value between 1 and 12

# day out of range
statement error
SELECT strptime('2018-10-100', '%Y-%m-%d')
----
Invalid Input Error: Could not parse string "2018-10-100" according to format specifier "%Y-%m-%d"
2018-10-100
          ^
Error: Full specifier did not match: trailing characters

# year without century out of range
statement error
SELECT strptime('969-10-10', '%y-%m-%d')
----
Invalid Input Error: Could not parse string "969-10-10" according to format specifier "%y-%m-%d"
969-10-10
   ^
Error: Literal does not match, expected -

# literal part does not match
statement error
SELECT strptime('2000/10/10', '%Y-%m-%d')
----
Invalid Input Error: Could not parse string "2000/10/10" according to format specifier "%Y-%m-%d"
2000/10/10
     ^
Error: Literal does not match, expected -

# incorrect date
statement error
SELECT strptime('2001-02-30', '%Y-%m-%d')
----
Conversion Error: Date out of range: 2001-2-30

# incorrect date
statement error
SELECT strptime('2000-10-hello', '%Y-%m-%d')
----
Invalid Input Error: Could not parse string "2000-10-hello" according to format specifier "%Y-%m-%d"
2000-10-hello
        ^
Error: Expected a number

# incorrect hour
statement error
SELECT strptime('2000-10-01 24:00:00', '%Y-%m-%d %H:%M:%S')
----
Invalid Input Error: Could not parse string "2000-10-01 24:00:00" according to format specifier "%Y-%m-%d %H:%M:%S"
2000-10-01 24:00:00
           ^
Error: Hour out of range, expected a value between 0 and 23

# incorrect hour with 12 hour clock
statement error
SELECT strptime('2000-10-01 00:00:00 AM', '%Y-%m-%d %I:%M:%S %p')
----
Invalid Input Error: Could not parse string "2000-10-01 00:00:00 AM" according to format specifier "%Y-%m-%d %I:%M:%S %p"
2000-10-01 00:00:00 AM
           ^
Error: Hour12 out of range, expected a value between 1 and 12

statement error
SELECT strptime('2000-10-01 13:00:00 AM', '%Y-%m-%d %I:%M:%S %p')
----
Invalid Input Error: Could not parse string "2000-10-01 13:00:00 AM" according to format specifier "%Y-%m-%d %I:%M:%S %p"
2000-10-01 13:00:00 AM
           ^
Error: Hour12 out of range, expected a value between 1 and 12

# incorrect minute
statement error
SELECT strptime('2000-10-01 23:60:00', '%Y-%m-%d %H:%M:%S')
----
Invalid Input Error: Could not parse string "2000-10-01 23:60:00" according to format specifier "%Y-%m-%d %H:%M:%S"
2000-10-01 23:60:00
              ^
Error: Minutes out of range, expected a value between 0 and 59

# incorrect seconds
statement error
SELECT strptime('2000-10-01 23:59:60', '%Y-%m-%d %H:%M:%S')
----
Invalid Input Error: Could not parse string "2000-10-01 23:59:60" according to format specifier "%Y-%m-%d %H:%M:%S"
2000-10-01 23:59:60
                 ^
Error: Seconds out of range, expected a value between 0 and 59

# incorrect microseconds
statement error
SELECT strptime('2000-10-01 23:59:59.10000000', '%Y-%m-%d %H:%M:%S.%f')
----
Invalid Input Error: Could not parse string "2000-10-01 23:59:59.10000000" according to format specifier "%Y-%m-%d %H:%M:%S.%f"
2000-10-01 23:59:59.10000000
                          ^
Error: Full specifier did not match: trailing characters

# huge number
statement error
SELECT strptime('2000-10-01 23:59:59.1000000000000000000000000000', '%Y-%m-%d %H:%M:%S.%f')
----
Invalid Input Error: Could not parse string "2000-10-01 23:59:59.1000000000000000000000000000" according to format specifier "%Y-%m-%d %H:%M:%S.%f"
2000-10-01 23:59:59.1000000000000000000000000000
                          ^
Error: Full specifier did not match: trailing characters

# empty string
statement error
SELECT strptime('', '%Y-%m-%d %H:%M:%S.%f')
----
Invalid Input Error: Could not parse string "" according to format specifier "%Y-%m-%d %H:%M:%S.%f"

# empty string with am/pm
statement error
SELECT strptime('', '%p')
----
Invalid Input Error: Could not parse string "" according to format specifier "%p"

statement error
SELECT strptime('a', '%p')
----
Invalid Input Error: Could not parse string "a" according to format specifier "%p"
a
^
Error: Expected AM/PM

# incorrect am/pm
statement error
SELECT strptime('mp', '%p')
----
PLACEHOLDER_ERROR_MESSAGE2449

statement error
SELECT strptime('pp', '%p')
----
PLACEHOLDER_ERROR_MESSAGE2448

statement error
SELECT strptime('zm', '%p')
----
PLACEHOLDER_ERROR_MESSAGE2447

# incorrect abbreviated weekday name
statement error
SELECT strptime('moa', '%a')
----
PLACEHOLDER_ERROR_MESSAGE2446

# incorrect weekday name
statement error
SELECT strptime('moaday', '%A')
----
PLACEHOLDER_ERROR_MESSAGE2445

statement error
SELECT strptime('mondayy', '%A')
----
PLACEHOLDER_ERROR_MESSAGE2444

# incorrect abbreviated month name
statement error
SELECT strptime('juk', '%b')
----
PLACEHOLDER_ERROR_MESSAGE2443

# incorrect weekday name
statement error
SELECT strptime('juke', '%B')
----
PLACEHOLDER_ERROR_MESSAGE2442

statement error
SELECT strptime('junee', '%B')
----
PLACEHOLDER_ERROR_MESSAGE2441

# day of year out of range
statement error
SELECT strptime('500', '%j')
----
PLACEHOLDER_ERROR_MESSAGE2440

statement error
SELECT strptime('500', '%-j')
----
PLACEHOLDER_ERROR_MESSAGE2439

statement error
SELECT strptime('0', '%j')
----
PLACEHOLDER_ERROR_MESSAGE2438

statement error
SELECT strptime('0', '%-j')
----
PLACEHOLDER_ERROR_MESSAGE2437

# week numbers out of range
statement error
SELECT strptime('60', '%U')
----
PLACEHOLDER_ERROR_MESSAGE2436

statement error
SELECT strptime('60', '%W')
----
PLACEHOLDER_ERROR_MESSAGE2435

# weekday out of range
statement error
SELECT strptime('9', '%w')
----
PLACEHOLDER_ERROR_MESSAGE2434

# Multiple offset types
statement error
SELECT strptime('20 19', '%U %W')
----
PLACEHOLDER_ERROR_MESSAGE2433

statement error
SELECT strptime('20 19', '%U %j')
----
PLACEHOLDER_ERROR_MESSAGE2432

statement error
SELECT strptime('20 19', '%W %j')
----
PLACEHOLDER_ERROR_MESSAGE2431

# AM/PM out of range
statement error
SELECT strptime('Mon 30, December 30, 20:3:5 PM', '%a %d, %B %y, %H:%M:%S %p')
----
PLACEHOLDER_ERROR_MESSAGE2430

# unrecognized specifier
statement error
SELECT strptime('21/10/2018', '%-q/%m/%Y')
----
PLACEHOLDER_ERROR_MESSAGE2429

# microseconds out of range
statement error
SELECT strptime('9999999', '%f')
----
PLACEHOLDER_ERROR_MESSAGE2428

# millisecond out of range
statement error
SELECT strptime('9999', '%g')
----
PLACEHOLDER_ERROR_MESSAGE2427

statement error
SELECT strptime('2000/10/10', random()::varchar)
----
PLACEHOLDER_ERROR_MESSAGE2426
